Closed
Bug 805787
Opened 13 years ago
Closed 13 years ago
build failure (link errors for nsIMutationObserver methods) with apple clang on OS X since bug 805527 landed
Categories
(Core :: XBL, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: jfkthame, Assigned: jfkthame)
References
Details
Attachments
(1 file)
Using the current Apple xcode tools on OS X 10.7:
Undefined symbols for architecture x86_64:
"nsIMutationObserver::ContentRemoved(nsIDocument*, nsIContent*, nsIContent*, int, nsIContent*)", referenced from:
nsNodeUtils::ContentRemoved(nsINode*, nsIContent*, int, nsIContent*) in nsNodeUtils.o
"nsIMutationObserver::ContentAppended(nsIDocument*, nsIContent*, nsIContent*, int)", referenced from:
nsNodeUtils::ContentAppended(nsIContent*, nsIContent*, int) in nsNodeUtils.o
"nsIMutationObserver::ContentInserted(nsIDocument*, nsIContent*, nsIContent*, int)", referenced from:
nsNodeUtils::ContentInserted(nsINode*, nsIContent*, int) in nsNodeUtils.o
"nsIMutationObserver::AttributeChanged(nsIDocument*, mozilla::dom::Element*, int, nsIAtom*, int)", referenced from:
nsNodeUtils::AttributeChanged(mozilla::dom::Element*, int, nsIAtom*, int) in nsNodeUtils.o
"nsIMutationObserver::AttributeWillChange(nsIDocument*, mozilla::dom::Element*, int, nsIAtom*, int)", referenced from:
nsNodeUtils::AttributeWillChange(mozilla::dom::Element*, int, nsIAtom*, int) in nsNodeUtils.o
"nsIMutationObserver::CharacterDataChanged(nsIDocument*, nsIContent*, CharacterDataChangeInfo*)", referenced from:
nsNodeUtils::CharacterDataChanged(nsIContent*, CharacterDataChangeInfo*) in nsNodeUtils.o
"nsIMutationObserver::CharacterDataWillChange(nsIDocument*, nsIContent*, CharacterDataChangeInfo*)", referenced from:
nsNodeUtils::CharacterDataWillChange(nsIContent*, CharacterDataChangeInfo*) in nsNodeUtils.o
ld: symbol(s) not found for architecture x86_64
clang: error: linker command failed with exit code 1 (use -v to see invocation)
(Note also bug 805527 comment 5.)
Thanks to dbaron for pinpointing the problematic line and how to resolve it.
| Assignee | ||
Comment 1•13 years ago
|
||
Attachment #675525 -
Flags: review?(dbaron)
| Assignee | ||
Updated•13 years ago
|
Summary: build failure with apple clang on OS X 10.7 since bug 805527 landed → build failure (link errors for nsIMutationObserver methods) with apple clang on OS X since bug 805527 landed
Comment on attachment 675525 [details] [diff] [review]
fix for build failure in nsNodeUtils.cpp with Apple clang 4.0 or other not-up-to-date versions
r=dbaron
Attachment #675525 -
Flags: review?(dbaron) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Assignee: nobody → jfkthame
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Updated•13 years ago
|
Version: unspecified → Trunk
Comment 5•13 years ago
|
||
Can someone please look at the generated code and make sure that this generates the correct code with the xcode clang?
You need to log in
before you can comment on or make changes to this bug.
Description
•