bug 805787 - fix for build failure in nsNodeUtils.cpp with Apple clang 4.0 or other not-up-to-date versions. r=dbaron