content/base/src/nsStubDocumentObserver.h
@@ -27,6 +27,7 @@
  *     prediction)
  */
 class nsStubDocumentObserver : public nsIDocumentObserver {
+public:
   NS_DECL_NSIDOCUMENTOBSERVER
 };
 
